# leetcode

./: .codeclimate.yml  .dockerignore  .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc.cjs  .prettierrc.yml  .releaserc.base.js  .releaserc.base.yml  .releaserc.changelog.js  .releaserc.changelog.yml  .releaserc.nextversion.js  .releaserc.nextversion.yml  .releaserc.publish.js  .releaserc.publish.yml  .releaserc.yml  .vimspector.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  build-all.sh  build.sh  cliff.toml  clippy.toml  cog.toml  create_problem_foundation.sh  cspell.json  generate-test-report.sh  package-lock.json  package.json  pnpm-lock.yaml  prettier.config.mjs  project-words.txt  release.config.js  renovate.json  renovate.jsonc  rust-toolchain.toml  (+8 more)
.cargo-husky/hooks/: pre-commit
.config/: nextest.toml
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  postCreate.sh
.github/: bump-ci  copilot-instructions.md  dependabot.yml  file-filters.yml  settings.yml  sync-repo-settings.yaml
.github/scripts/: cleanup-container-build-cache.sh  cleanup-containers.sh  cleanup.sh  update-version.sh
.github/workflows/: _debug.yml  build-pr.yaml  build.yaml  build.yml  ci.yml  cleanup-pr-images.yaml  cleanup-pr-images.yml  codeql.yml  compare-release-image.yml  container-cleanup.yml  debug.yml  dependabot.yml  dump.yml  format.yml  graduate-release.yml  lint-commits.yaml  lint-commits.yml  lint.yml  machete.yml  pr.yaml  prettier.yml  promote-artifacts.yml  publish-crate-after-release.yml  release.yml  retag-build-cache-after-pr.yml  retag-build-cache-after-push.yml  retag-containers-after-push.yml  retag-containers-after-release.yml  rust.yml  semantic-tags-after-release.yml  semantic-tags.yml  semgrep.yml  spellcheck.yml  test-release.yml  yml-lint.yml
.husky/: pre-push
build-scripts/: build.sh  setup-env.sh
crates/leetcode-0001-0100/: Cargo.toml
crates/leetcode-0101-0200/: Cargo.toml
crates/leetcode-0201-0300/: Cargo.toml
crates/leetcode-0301-0400/: Cargo.toml
crates/leetcode-0701-0800/: Cargo.toml
crates/leetcode-0701-0800/src/: lib.rs  problem_0741.rs  problem_0747.rs
crates/leetcode-0801-0900/: Cargo.toml
crates/leetcode-1001-1100/: Cargo.toml
crates/leetcode-1601-1700/: Cargo.toml
crates/leetcode-1701-1800/: Cargo.toml
crates/rust-seed/: Cargo.toml
crates/rust-seed/src/: build_env.rs  main.rs
crates/rust-seed/tests/: integration_tests.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs  utils.rs
src/: build.rs  build_env.rs  lib.rs  main.rs  problem_0001.rs  problem_0002.rs  problem_0004.rs  problem_0005.rs  problem_0006.rs  problem_0010.rs  problem_0012.rs  problem_0013.rs  problem_0017.rs  problem_0018.rs  problem_0021.rs  problem_0022.rs  problem_0026.rs  problem_0028.rs  problem_0030.rs  problem_0032.rs  problem_0034.rs  problem_0035.rs  problem_0036.rs  problem_0038.rs  problem_0039.rs  problem_0040.rs  problem_0042.rs  problem_0044.rs  problem_0045.rs  problem_0049.rs  problem_0050.rs  problem_0051.rs  problem_0053.rs  problem_0056.rs  problem_0058.rs  problem_0059.rs  problem_0061.rs  problem_0062.rs  problem_0063.rs  problem_0067.rs  (+109 more)
src/problem_0001/: mod.rs
src/problem_0002/: mod.rs
src/problem_0003/: mod.rs
src/problem_0004/: mod.rs
src/problem_0005/: mod.rs
src/problem_0006/: mod.rs
src/problem_0007/: mod.rs
src/problem_0008/: mod.rs
src/problem_0009/: mod.rs
src/problem_0010/: mod.rs
src/problem_0011/: mod.rs
src/problem_0012/: mod.rs
src/problem_0013/: mod.rs
src/problem_0014/: mod.rs
src/problem_0015/: mod.rs
src/problem_0016/: mod.rs
src/problem_0017/: mod.rs
src/problem_0018/: mod.rs
src/problem_0019/: mod.rs
src/problem_0020/: mod.rs
src/problem_0021/: mod.rs
src/problem_0022/: mod.rs
src/problem_0023/: mod.rs
src/problem_0024/: mod.rs
src/problem_0025/: mod.rs
src/problem_0026/: mod.rs
src/problem_0027/: mod.rs
src/problem_0028/: mod.rs
src/problem_0029/: mod.rs
src/problem_0030/: mod.rs
src/problem_0031/: mod.rs
src/problem_0032/: mod.rs
src/problem_0033/: mod.rs
src/problem_0034/: mod.rs
src/problem_0035/: mod.rs
src/problem_0036/: mod.rs
src/problem_0037/: mod.rs
src/problem_0038/: mod.rs
src/problem_0039/: mod.rs
src/problem_0040/: mod.rs
src/problem_0041/: mod.rs
src/problem_0042/: mod.rs
src/problem_0043/: mod.rs
src/problem_0044/: mod.rs
src/problem_0045/: mod.rs
src/problem_0046/: mod.rs
src/problem_0047/: mod.rs
src/problem_0048/: mod.rs
src/problem_0049/: mod.rs
src/problem_0050/: mod.rs
src/problem_0051/: mod.rs
src/problem_0052/: mod.rs
src/problem_0053/: mod.rs
src/problem_0054/: mod.rs
src/problem_0055/: mod.rs
src/problem_0056/: mod.rs
src/problem_0057/: mod.rs
src/problem_0058/: mod.rs
src/problem_0059/: mod.rs
src/problem_0060/: mod.rs
src/problem_0061/: mod.rs
src/problem_0062/: mod.rs
src/problem_0063/: mod.rs
src/problem_0064/: mod.rs
src/problem_0065/: mod.rs
src/problem_0066/: mod.rs
src/problem_0067/: mod.rs
src/problem_0068/: mod.rs
src/problem_0069/: mod.rs
src/problem_0070/: mod.rs
src/problem_0071/: mod.rs
src/problem_0072/: mod.rs
src/problem_0073/: mod.rs
src/problem_0074/: mod.rs
src/problem_0075/: mod.rs
src/problem_0076/: mod.rs
src/problem_0077/: mod.rs
src/problem_0078/: mod.rs
src/problem_0079/: mod.rs
src/problem_0080/: mod.rs
src/problem_0081/: mod.rs
src/problem_0082/: mod.rs
src/problem_0083/: mod.rs
src/problem_0084/: mod.rs
src/problem_0085/: mod.rs
src/problem_0086/: mod.rs
src/problem_0087/: mod.rs  vec_char_char.rs
src/problem_0088/: mod.rs
src/problem_0089/: mod.rs
src/problem_0090/: mod.rs
src/problem_0091/: mod.rs
src/problem_0092/: mod.rs
src/problem_0093/: mod.rs
src/problem_0094/: mod.rs
src/problem_0095/: mod.rs
src/problem_0096/: mod.rs
src/problem_0097/: mod.rs
src/problem_0098/: mod.rs
src/problem_0099/: mod.rs
src/problem_0100/: mod.rs
src/problem_0101/: mod.rs
src/problem_10/: mod.rs
tests/: integration_tests.rs
(+369 files in other folders)
